# worldvueai

./: .gitignore  PROMPT_OPTIMIZATION_SUMMARY.md  QUICK_START_OPTIMIZED.md  analyze_clusters.py  analyze_exclusions.py  cluster_analysis.py  countries.geojson  export_supabase_fulltext.py  export_supabase_to_csv.py  index.html  local_backup.py  massive_llm_labeling.py  monitor.html  refresh_and_run_pipeline.py  requirements.txt  run_experiment.py  run_optimized_pipeline.py  run_parallel_judge.py  run_parallel_judge_for_pipeline.py  run_pipeline_with_timestamped_artifacts.py  run_supabase_to_embeddings.py  run_topic_training_pipeline.py  simple_scorer.py  temp_check_embeddings.py  test_optimized_prompts.py  train_pipeline_with_llm.py  train_topic_transformer.py  transformer_bias_model.py  worldvue_fetcher.py  worldvue_server.py
worldvue/: Makefile  PIPELINE_GUIDE.md  README.md  pyproject.toml
worldvue/configs/: budget.yaml  budget_live_test.yaml  budget_preview.yaml  budget_tiny_test.yaml  judge.yaml  sampling.yaml  weak_labels.yaml
worldvue/src/worldvue/: __init__.py
worldvue/src/worldvue/budget/: __init__.py  config.py  enforcer.py  planner.py
worldvue/src/worldvue/cli/: main.py
worldvue/src/worldvue/clustering/: __init__.py  cluster.py  dedup.py  global_cluster.py
worldvue/src/worldvue/data/: cache.py  loaders.py  types.py
worldvue/src/worldvue/embeddings/: encoder.py  store.py
worldvue/src/worldvue/eval/: __init__.py  diagnostic.py  metrics.py  style_eval.py
worldvue/tests/: test_budget.py  test_sampling.py  test_weak_labels.py
(+46 files in other folders)
